kubernetes-kit-demo/src/test/resources/k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-kit-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: kubernetes-kit-demo
  template:
    metadata:
      labels:
        app: kubernetes-kit-demo
    spec:
      containers:
        - name: kubernetes-kit-demo
          image: kubernetes-kit-demo:test
          imagePullPolicy: Never
          env:
            - name: APP_VERSION
              value: test
          ports:
            - name: http
              containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-kit-demo
spec:
  selector:
    app: kubernetes-kit-demo
  ports:
    - name: http
      port: 80
      targetPort: http
